[package]
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"
name = "manning-lp-async-rust-project-1-m1"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes", "unstable"]}
async-trait = "0.1.50"
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.2"
futures = "0.3.15"
yahoo_finance_api = "1.1"
